--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>cosmocode-parent</artifactId>
     <version>1.2</version>
   </parent>
+  <scm>
+  	<developerConnection>scm:svn:http://commons.svn.cosmocode.de/cosmocode-image-core/trunk</developerConnection>
+  </scm>
   <dependencies>
   </dependencies>
 </project>
