--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1.3</version>
   </parent>
   <scm>
-  	<developerConnection>scm:svn:http://commons.svn.cosmocode.de/cosmocode-image-core/trunk</developerConnection>
+  	<developerConnection>scm:svn:https://commons.svn.cosmocode.de/cosmocode-image-core/trunk</developerConnection>
   </scm>
   <dependencies>
   </dependencies>
