--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.cosmocode.image</groupId>
   <artifactId>cosmocode-image-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1</version>
+  <version>1.1-SNAPSHOT</version>
   <name>CosmoCode Image Core</name>
   <url>http://maven.apache.org</url>
   <parent>
@@ -12,7 +12,7 @@
     <version>1.5.0</version>
   </parent>
   <scm>
-  	<developerConnection>scm:svn:https://commons.svn.cosmocode.de/cosmocode-image-core/tags/1.0.1</developerConnection>
+  	<developerConnection>scm:svn:https://commons.svn.cosmocode.de/cosmocode-image-core/trunk</developerConnection>
   </scm>
   <dependencies>
   </dependencies>
