--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<version>2.4.0</version>
 	</parent>
 	<scm>
-		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/cosmocode-image-core/trunk</developerConnection>
+		<developerConnection>scm:git:git@github.com:cosmocode/${project.artifactId}.git</developerConnection>
 	</scm>
 	<dependencies>
 	</dependencies>
